--- a/slides.ipynb
+++ b/slides.ipynb
@@ -970,7 +970,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -984,11 +984,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
-  },
-  "widgets": {
-   "state": {},
-   "version": "1.0.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
